--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginTop="20dp"
-    android:layout_height="match_parent">
+    android:background="#fff">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,8 +69,14 @@
                 android:id="@+id/main_system"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="立即关闭" />
+                android:text="AlertSheet" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/main_ad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="显示广告" />
     </LinearLayout>
 </RelativeLayout>
